--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -35,6 +35,9 @@
     "message": "$${0}を例外として追加",
     "description": "Add domain as exception"
   },
+  "add_website": {
+    "message": "Add website"
+  },
   "add_website_exception": {
     "message": "ウェブサイトの例外を追加"
   },
@@ -75,6 +78,9 @@
   "audio_video_player": {
     "message": "オーディオ/ビデオ・プレーヤー",
     "description": "Tracker category name"
+  },
+  "automatically_rejects_cookie_consent_notices_": {
+    "message": "Cookieの同意通知を自動で拒否します。"
   },
   "automatically_rejects_of_cookie_consent_notices_": {
     "message": "Cookieの同意通知を自動で拒否します。"
@@ -197,6 +203,9 @@
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "ブラウザの制限および追加権限がないため、Ghosteryによる保護を開始できません。"
   },
+  "eliminates_ads_on_websites_for_safe_and_fast_browsing_": {
+    "message": "ウェブサイト上の広告を除去し、安全で高速なブラウジングを実現します。"
+  },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
     "message": "ウェブサイト上の広告を除去し、安全で高速なブラウジングを実現します。"
   },
@@ -251,9 +260,6 @@
   "for_more_information_read_our_full": {
     "message": "詳細はこちらをご覧ください"
   },
-  "further_protection": {
-    "message": "高度な保護"
-  },
   "get_help": {
     "message": "ヘルプ"
   },
@@ -265,6 +271,9 @@
   },
   "ghostery_can_t_block_them_due_to_missing_permissions_": {
     "message": "Ghosteryは権限が足りないため、ブロックできません。"
+  },
+  "ghostery_has_been_resumed_": {
+    "message": "Ghostery has been resumed."
   },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghosteryがこのサイトで再開されました。"
@@ -280,6 +289,9 @@
   },
   "ghostery_is_installed_with_limited_functionality": {
     "message": "Ghosteryは制限付きの機能でインストールされています。"
+  },
+  "ghostery_is_paused": {
+    "message": "ゴーストリーの一時停止"
   },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghosteryは、このサイトで一時停止しています。"
@@ -376,6 +388,9 @@
     "message": "さまざまな",
     "description": "Tracker category name"
   },
+  "missing__pause_ghostery___you_can_find_it_in_your_privacy_protection_settings_": {
+    "message": "Missing “Pause Ghostery”? You can find it in your privacy protection settings."
+  },
   "modify_the_recommended_blocking_settings_for_every_website_": {
     "message": "それぞれのウェブサイトについて推奨されるブロック設定を変更します。"
   },
@@ -421,6 +436,9 @@
   "on": {
     "message": "オン"
   },
+  "open_ghostery_settings": {
+    "message": "Open Ghostery settings"
+  },
   "open_video": {
     "message": "ビデオを開く"
   },
@@ -440,10 +458,7 @@
   "our_recommendation_for_this_activity": {
     "message": "このアクティビティのおすすめ"
   },
-  "pause_on_this_site": {
-    "message": "このサイトでのポーズ"
-  },
-  "paused": {
+  "pause_ghostery": {
     "message": "一時停止"
   },
   "permission_required": {
@@ -458,6 +473,9 @@
   "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "検索結果のリンクを、Googleがページに直接リンクするのではなく、自社のサーバーを経由してリダイレクトするのを防ぎます。"
   },
+  "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
+    "message": "検索結果のリンクを、Googleがページに直接リンクするのではなく、自社のサーバーを経由してリダイレクトするのを防ぎます。"
+  },
   "prevents_various_tracking_techniques_using_ai_driven_technology_": {
     "message": "AIを活用した技術で様々な追跡手法を防止します。"
   },
@@ -469,9 +487,6 @@
   },
   "privacy_protection": {
     "message": "プライバシー保護"
-  },
-  "protection": {
-    "message": "保護"
   },
   "protection_exceptions": {
     "message": "保護の例外"
@@ -494,12 +509,6 @@
   "report_a_broken_page": {
     "message": "区切られたページを報告"
   },
-  "resume": {
-    "message": "再開"
-  },
-  "resume_protection": {
-    "message": "再就職の保護"
-  },
   "save": {
     "message": "保存"
   },
@@ -514,6 +523,12 @@
   },
   "search_website___": {
     "message": "サイトを検索..."
+  },
+  "select_time_frame": {
+    "message": "Select time frame"
+  },
+  "send_feedback": {
+    "message": "Send feedback"
   },
   "set_blocking_preference": {
     "message": "ブロック設定に進む"
@@ -556,6 +571,9 @@
   "submit_a_new_tracker": {
     "message": "新しいトラッカーを提出"
   },
+  "suspends_privacy_protection_globally_for_1_day_": {
+    "message": "Suspends privacy protection globally for 1 day."
+  },
   "telemetry": {
     "message": "テレメトリー",
     "description": "Tracker category name"
@@ -565,6 +583,9 @@
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Ghosteryはウェブ上でのプライバシーを基本的人権だと考え、それに対する対策を講じています。いつもサポートいただき、ありがとうございます。"
+  },
+  "to_adjust_privacy_protection_trust_a_site_": {
+    "message": "To adjust privacy protection trust a site:"
   },
   "tracker_database": {
     "message": "トラッカー・データベース"
@@ -676,9 +697,6 @@
   },
   "you_are_signed_in_as_": {
     "message": "次のユーザーでサインインしています:"
-  },
-  "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "以下で設定を調整することができます。常時ONにしておくことをお勧めします。"
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "検索結果の横にトラッカーホイールが表示されなくなります。"
