--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -35,6 +35,9 @@
     "message": "Ajouter $${0} comme exception",
     "description": "Add domain as exception"
   },
+  "add_website": {
+    "message": "Add website"
+  },
   "add_website_exception": {
     "message": "Ajouter une exception de site web"
   },
@@ -75,6 +78,9 @@
   "audio_video_player": {
     "message": "Lecteur audio/vidéo ",
     "description": "Tracker category name"
+  },
+  "automatically_rejects_cookie_consent_notices_": {
+    "message": "Refuse automatiquement les avis de consentement aux témoins."
   },
   "automatically_rejects_of_cookie_consent_notices_": {
     "message": "Refuse automatiquement les avis de consentement aux témoins."
@@ -197,6 +203,9 @@
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "En raison des restrictions du navigateur et d'autorisations supplémentaires manquantes, Ghostery n'est pas en mesure de vous protéger."
   },
+  "eliminates_ads_on_websites_for_safe_and_fast_browsing_": {
+    "message": "Supprime les publicités sur les sites web pour une navigation sûre et rapide."
+  },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
     "message": "Supprime les publicités sur les sites web pour une navigation sûre et rapide."
   },
@@ -251,9 +260,6 @@
   "for_more_information_read_our_full": {
     "message": "Pour plus d'information, lisez notre"
   },
-  "further_protection": {
-    "message": "Protection supplémentaire"
-  },
   "get_help": {
     "message": "Obtenir de l'aide"
   },
@@ -265,6 +271,9 @@
   },
   "ghostery_can_t_block_them_due_to_missing_permissions_": {
     "message": "Ghostery ne peut pas les bloquer en raison d'autorisations manquantes."
+  },
+  "ghostery_has_been_resumed_": {
+    "message": "Ghostery has been resumed."
   },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghostery a été réactivé sur ce site."
@@ -280,6 +289,9 @@
   },
   "ghostery_is_installed_with_limited_functionality": {
     "message": "Ghostery est installé avec une fonctionnalité limitée"
+  },
+  "ghostery_is_paused": {
+    "message": "Ghostery en pause"
   },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery est en pause sur ce site."
@@ -376,6 +388,9 @@
     "message": "Divers",
     "description": "Tracker category name"
   },
+  "missing__pause_ghostery___you_can_find_it_in_your_privacy_protection_settings_": {
+    "message": "Missing “Pause Ghostery”? You can find it in your privacy protection settings."
+  },
   "modify_the_recommended_blocking_settings_for_every_website_": {
     "message": "Modifiez les réglages de blocage recommandés pour chaque site web."
   },
@@ -421,6 +436,9 @@
   "on": {
     "message": "activé"
   },
+  "open_ghostery_settings": {
+    "message": "Open Ghostery settings"
+  },
   "open_video": {
     "message": "Ouvrir la vidéo"
   },
@@ -440,11 +458,8 @@
   "our_recommendation_for_this_activity": {
     "message": "Notre recommandation pour cette activité"
   },
-  "pause_on_this_site": {
-    "message": "Pause sur ce site"
-  },
-  "paused": {
-    "message": "En pause"
+  "pause_ghostery": {
+    "message": "Pause"
   },
   "permission_required": {
     "message": "Autorisation requise"
@@ -458,6 +473,9 @@
   "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "Empêcher Google de rediriger les liens des résultats de recherche via ses serveurs au lieu de renvoyer directement vers les pages."
   },
+  "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
+    "message": "Empêcher Google de rediriger les liens des résultats de recherche via ses serveurs au lieu de renvoyer directement vers les pages."
+  },
   "prevents_various_tracking_techniques_using_ai_driven_technology_": {
     "message": "Empêche différentes techniques de suivi à l'aide d'une technologie basée sur l'IA."
   },
@@ -469,9 +487,6 @@
   },
   "privacy_protection": {
     "message": "Protection de la vie privée"
-  },
-  "protection": {
-    "message": "protection"
   },
   "protection_exceptions": {
     "message": "Exceptions de protection"
@@ -494,12 +509,6 @@
   "report_a_broken_page": {
     "message": "Signaler un lien brisé"
   },
-  "resume": {
-    "message": "Reprendre"
-  },
-  "resume_protection": {
-    "message": "Reprise de la protection."
-  },
   "save": {
     "message": "Enregistrer"
   },
@@ -514,6 +523,12 @@
   },
   "search_website___": {
     "message": "Rechercher sur le site..."
+  },
+  "select_time_frame": {
+    "message": "Select time frame"
+  },
+  "send_feedback": {
+    "message": "Send feedback"
   },
   "set_blocking_preference": {
     "message": "Définir la préférence de blocage"
@@ -556,6 +571,9 @@
   "submit_a_new_tracker": {
     "message": "Soumettre un nouveau mouchard"
   },
+  "suspends_privacy_protection_globally_for_1_day_": {
+    "message": "Suspends privacy protection globally for 1 day."
+  },
   "telemetry": {
     "message": "Télémétrie",
     "description": "Tracker category name"
@@ -565,6 +583,9 @@
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Merci de soutenir la lutte de Ghostery pour un Web où la vie privée est un droit humain fondamental !"
+  },
+  "to_adjust_privacy_protection_trust_a_site_": {
+    "message": "To adjust privacy protection trust a site:"
   },
   "tracker_database": {
     "message": "Fichage de traqueurs"
@@ -676,9 +697,6 @@
   },
   "you_are_signed_in_as_": {
     "message": "Vous êtes connecté en tant que :"
-  },
-  "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "Vous pouvez ajuster les paramètres ci-dessous. Nous vous recommandons de les maintenir activés à tout moment."
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "Vous ne verrez plus de camembert des trackers à côté des résultats de recherche."
