--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -35,6 +35,9 @@
     "message": "Добавить $${0} в качестве исключения",
     "description": "Add domain as exception"
   },
+  "add_website": {
+    "message": "Add website"
+  },
   "add_website_exception": {
     "message": "Добавить сайт в качестве исключения"
   },
@@ -75,6 +78,9 @@
   "audio_video_player": {
     "message": "Аудио/видео проигрыватель",
     "description": "Tracker category name"
+  },
+  "automatically_rejects_cookie_consent_notices_": {
+    "message": "Автоматически запрещает использование файлов cookie."
   },
   "automatically_rejects_of_cookie_consent_notices_": {
     "message": "Автоматически запрещает использование файлов cookie."
@@ -197,6 +203,9 @@
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "Ghostery не работает из-за ограничений браузера и отсутствия дополнительных разрешений."
   },
+  "eliminates_ads_on_websites_for_safe_and_fast_browsing_": {
+    "message": "Блокирует рекламу на сайтах для более быстрой и безопасной работы в браузере."
+  },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
     "message": "Блокирует рекламу на сайтах для более быстрой и безопасной работы в браузере."
   },
@@ -251,9 +260,6 @@
   "for_more_information_read_our_full": {
     "message": "Для получения дополнительной информации прочтите"
   },
-  "further_protection": {
-    "message": "Дополнительная защита"
-  },
   "get_help": {
     "message": "Помощь"
   },
@@ -265,6 +271,9 @@
   },
   "ghostery_can_t_block_them_due_to_missing_permissions_": {
     "message": "У Ghostery недостаточно разрешений для блокировки трекеров."
+  },
+  "ghostery_has_been_resumed_": {
+    "message": "Ghostery has been resumed."
   },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "На этом сайте возобновлена работа Ghostery."
@@ -280,6 +289,9 @@
   },
   "ghostery_is_installed_with_limited_functionality": {
     "message": "Ghostery устанавливается с ограниченной функциональностью"
+  },
+  "ghostery_is_paused": {
+    "message": "Ghostery сделал паузу"
   },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery приостановлен на этом сайте."
@@ -376,6 +388,9 @@
     "message": "Разное",
     "description": "Tracker category name"
   },
+  "missing__pause_ghostery___you_can_find_it_in_your_privacy_protection_settings_": {
+    "message": "Missing “Pause Ghostery”? You can find it in your privacy protection settings."
+  },
   "modify_the_recommended_blocking_settings_for_every_website_": {
     "message": "Настраивайте рекомендуемые параметры блокировки для каждого сайта."
   },
@@ -421,6 +436,9 @@
   "on": {
     "message": "Вкл"
   },
+  "open_ghostery_settings": {
+    "message": "Open Ghostery settings"
+  },
   "open_video": {
     "message": "Открытое видео"
   },
@@ -440,11 +458,8 @@
   "our_recommendation_for_this_activity": {
     "message": "Рекомендации для этого действия"
   },
-  "pause_on_this_site": {
-    "message": "Пауза на этом сайте"
-  },
-  "paused": {
-    "message": "Приостановлено"
+  "pause_ghostery": {
+    "message": "Приостановить Ghostery"
   },
   "permission_required": {
     "message": "Требуется разрешение"
@@ -458,6 +473,9 @@
   "prevent_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "Запретить перенаправление ссылок на результаты поиска через серверы Google вместо прямого доступа к страницам."
   },
+  "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
+    "message": "Запретить перенаправление ссылок на результаты поиска через серверы Google вместо прямого доступа к страницам."
+  },
   "prevents_various_tracking_techniques_using_ai_driven_technology_": {
     "message": "Использует ИИ для блокировки различных способов сбора данных."
   },
@@ -469,9 +487,6 @@
   },
   "privacy_protection": {
     "message": "Защита конфиденциальности"
-  },
-  "protection": {
-    "message": "защита"
   },
   "protection_exceptions": {
     "message": "Исключения защиты"
@@ -494,12 +509,6 @@
   "report_a_broken_page": {
     "message": "Сообщить о поврежденной странице"
   },
-  "resume": {
-    "message": "Возобновить"
-  },
-  "resume_protection": {
-    "message": "Защита резюме"
-  },
   "save": {
     "message": "Сохранить"
   },
@@ -514,6 +523,12 @@
   },
   "search_website___": {
     "message": "Поиск сайта..."
+  },
+  "select_time_frame": {
+    "message": "Select time frame"
+  },
+  "send_feedback": {
+    "message": "Send feedback"
   },
   "set_blocking_preference": {
     "message": "Настроить параметры блокировки"
@@ -556,6 +571,9 @@
   "submit_a_new_tracker": {
     "message": "Отправить новый трекер"
   },
+  "suspends_privacy_protection_globally_for_1_day_": {
+    "message": "Suspends privacy protection globally for 1 day."
+  },
   "telemetry": {
     "message": "Телеметрия",
     "description": "Tracker category name"
@@ -565,6 +583,9 @@
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Благодарим за помощь Ghostery в борьбе за конфиденциальность как за основное право человека."
+  },
+  "to_adjust_privacy_protection_trust_a_site_": {
+    "message": "To adjust privacy protection trust a site:"
   },
   "tracker_database": {
     "message": "База данных трекера"
@@ -676,9 +697,6 @@
   },
   "you_are_signed_in_as_": {
     "message": "Вы вошли как:"
-  },
-  "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "Вы можете изменить настройки ниже. Рекомендуем включить все функции Ghostery."
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "Вы больше не будете видеть статистику трекера рядом с результатами поиска."
